# AIForLive

./: .dockerignore  .env.example  .env.supabase.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.render  GEMINI.md  LICENSE  README.md  STEAM_for_Vietnam_EduOne_ProblemBrief.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  render.yaml  report.md  tsconfig.base.json
apps/ai-service/: Dockerfile  README.md  pyproject.toml  requirements.render.txt  requirements.txt
apps/ai-service/app/: __init__.py  main.py
apps/ai-service/app/api/: grading.py  personalization.py
apps/ai-service/app/core/: settings.py
apps/ai-service/app/schemas/: __init__.py  grading.py  personalization.py
apps/ai-service/app/services/: __init__.py  diagnosis.py  forgetting.py  idea_grading.py  knowledge_tracing.py  next_attempt.py  personalization.py  recommendation.py
apps/ai-service/data/synthetic/: README.md  attempts.csv  concept_ground_truth.csv  concepts.csv  exercises.csv  learning_events.jsonl  misconceptions.csv  student_profiles.csv
apps/ai-service/ml/artifacts/: evaluation.json  next_attempt_model.joblib
apps/ai-service/ml/diagnosis/: README.md
apps/ai-service/ml/evaluation/: README.md
apps/ai-service/ml/forgetting/: README.md
apps/ai-service/ml/mastery/: README.md
apps/ai-service/scripts/: evaluate_models.py  export_model_report.py  generate_synthetic_data.py  train_models.py
apps/ai-service/tests/: test_api.py  test_diagnosis.py  test_forgetting.py  test_grading.py  test_knowledge_tracing.py  test_recommendation.py  test_service.py
(+200 files in other folders)
