[project]
name = "edurecall-ai-service"
version = "0.1.0"
description = "Personalization intelligence for EduRecall AI"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["data", "ml/artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
